--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,8 @@
     <title>Svelte app</title>
 
     <link href='/favicon.png' rel='icon' type='image/png'>
+    <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+          integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" rel="stylesheet" />
     <link href='/global.css' rel='stylesheet'>
     <link href='/build/bundle.css' rel='stylesheet'>
 
