playing with colors

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset='utf-8'>
-    <meta content='width=device-width,initial-scale=1' name='viewport'>
+    <meta charset="utf-8">
+    <meta content="width=device-width,initial-scale=1" name="viewport">
 
-    <title>Svelte app</title>
+    <title>Productive Notes</title>
 
-    <link href='/favicon.png' rel='icon' type='image/png'>
+    <link href="/favicon.png" rel="icon" type="image/png">
     <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-          integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" rel="stylesheet" />
-    <link href='/global.css' rel='stylesheet'>
-    <link href='/build/bundle.css' rel='stylesheet'>
+          integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
+    <link href="/global.css" rel="stylesheet">
+    <link href="/build/bundle.css" rel="stylesheet">
 
-    <script defer src='/build/bundle.js'></script>
+    <script defer="" src="/build/bundle.js"></script>
 </head>
 
 <body>
-</body>
-</html>
+<noscript>
+    You need to enable JavaScript to run this app.
+</noscript>
